5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1644_2703.log
== TEST (2019-04-09 16:26:25) 
-- CODE:
idade = float(input("Idade: "))
if (idade >= 18):
	print("eleitor")
else (idade < 18)
	print("nao_eleitor")

	
-- ERROR:
File "XXXX", line 4
    else (idade < 18)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:26:30) 
-- CODE:
idade = float(input("Idade: "))
if (idade >= 18):
	print("eleitor")
else (idade < 18):
	print("nao_eleitor")

	
-- ERROR:
File "XXXX", line 4
    else (idade < 18):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:26:41) 
-- CODE:
idade = float(input("Idade: "))
if (idade >= 18):
	print("eleitor")
else (idade < 18):
	print("nao_eleitor")

	
-- ERROR:
File "XXXX", line 4
    else (idade < 18):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:21) 
-- CODE:
idade = float(input("Idade: "))
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")

	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:29:08) 
-- CODE:
idade = float(input("Idade: "))
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")

	
-- EXECUTION TIME:
0.274778
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
